15290
I'd expect the RichLong max operator to be usable in the "max=" form, as per the Scala specification (6.12.4).
{code}
var lm = 0L
lm max= 1L // equivalent to: lm = lm max 1L
{code}
With current Scala it returns a "reassignment to val" error:

{code}
Welcome to Scala version 2.8.0.r21821-b20100506020142 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_20).
Type in expressions to have them evaluated.
Type :help for more information.

scala> var lm = 0L
lm: Long = 0

scala> lm max= 1L
<console>:6: error: reassignment to val
       lm max= 1L
             ^
{code}
